--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </button>
                 </li>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="resources/index.html">Reports</a></li>
+                <li><a href="intel/index.html">Reports</a></li>
                 <li><a href="about.html">About</a></li>
                 <!-- <li><a href="contact.html">Contact</a></li> -->
             </ul>
@@ -44,7 +44,7 @@
             <section class="resources-links">
                 <h2>Daily Intelligence</h2>
                 <p>Pax Cynica provides curated analysis and strategic insights on today's complex world.</p>
-                <a href="resources/index.html">Resources & Reports</a>
+                <a href="intel/index.html">Resources & Reports</a>
             </section>
 
             <!-- Disinfo Links Section -->
