--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             </button>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="resources/index.html">Reports</a></li>
+                <li><a href="intel/index.html">Reports</a></li>
                 <li><a href="about.html">About</a></li>
                 <!-- <li><a href="contact.html">Contact</a></li> -->
             </ul>
