--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Vigil Cortex</title>
+    <title>About Datum Global</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,10 +14,10 @@
 
 <body>
     <header>
-        <img src="assets/images/logo_0.png" alt="Vigil Cortex Profile" class="header-profile">
+        <img src="assets/images/logo_0.png" alt="Datum Global Profile" class="header-profile">
 
         <div class="header-text-wrapper">
-            <h1>About Vigil Cortex</h1>
+            <h1>About Datum Global</h1>
             <p>Your Filter for the Information War</p>
         </div>
         <!-- Header Navigation Bar -->
@@ -39,7 +39,7 @@
                 <h2>Our Mission</h2>
                 <hr>
                 <p>
-                    Vigil Cortex is dedicated to providing clear, high-quality intelligence analysis in an increasingly
+                    Datum Global is dedicated to providing clear, high-quality intelligence analysis in an increasingly
                     challenging information environment. We believe that navigating today's complex geopolitical and
                     social landscapes requires more than just consuming news. It demands rigorous synthesis, critical
                     skepticism, and an understanding of the forces shaping narratives and perceptions.
@@ -154,15 +154,15 @@
     </main>
     <footer>
         <nav class="connect-links">
-            <a href="https://VigilCortex.substack.com/" target="_blank" aria-label="Substack"><i
+            <a href="https://datumglobal.substack.com/" target="_blank" aria-label="Substack"><i
                     class="fab fa-stack-overflow"></i></a>
-            <a href="https://medium.com/@VigilCortex" target="_blank" aria-label="Medium"><i
+            <a href="https://medium.com/@datumglobal" target="_blank" aria-label="Medium"><i
                     class="fab fa-medium"></i></a>
-            <a href="https://www.youtube.com/@VigilCortex" target="_blank" aria-label="YouTube"><i
+            <a href="https://www.youtube.com/@datumglobal" target="_blank" aria-label="YouTube"><i
                     class="fab fa-youtube"></i></a>
-            <a href="https://bsky.app/profile/VigilCortex.bsky.social" target="_blank" aria-label="Blue Sky"><i
+            <a href="https://bsky.app/profile/datumglobal.bsky.social" target="_blank" aria-label="Blue Sky"><i
                     class="fas fa-globe"></i></a>
-            <a href="https://x.com/VigilCortex" target="_blank" aria-label="X"><i class="fab fa-twitter"></i></a>
+            <a href="https://x.com/datumglobal" target="_blank" aria-label="X"><i class="fab fa-twitter"></i></a>
         </nav>
         <p>&copy; 2023 Vigil Cortex</p>
     </footer>
