--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vigil Cortex - Strategic Insights for Informed Citizens</title>
+    <title>Datum Global</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 
 </head>
 
 <body>
     <header>
-        <img src="assets/images/logo_0.png" alt="Vigil Cortex Profile" class="header-profile">
+        <img src="assets/images/logo_0.png" alt="Datum Global Profile" class="header-profile">
         <div class="header-text-wrapper">
-            <h1>Vigil Cortex</h1>
+            <h1>Datum Global</h1>
             <p>Strategic Insights for Informed Citizens</p>
         </div>
         <!-- Header Navigation Bar -->
@@ -43,8 +43,8 @@
             <!-- Resources Section -->
             <section class="resources-links">
                 <h2>Daily Intelligence</h2>
-                <p>Vigil Cortex provides curated analysis and strategic insights on today's complex world.</p>
-                <a href="reports.html">Resources & Reports</a>
+                <p>Datum Global offers curated analysis and strategic insights to navigate the complexities of global politics and the information war.</p>
+                <a href="reports.html">Reports</a>
             </section>
 
             <!-- Disinfo Links Section -->
@@ -67,18 +67,18 @@
     </main>
     <footer>
         <nav class="connect-links">
-            <a href="https://VigilCortex.substack.com/" target="_blank" aria-label="Substack"><i
+            <a href="https://datumglobal.substack.com/" target="_blank" aria-label="Substack"><i
                     class="fab fa-stack-overflow"></i></a>
-            <a href="https://medium.com/@VigilCortex" target="_blank" aria-label="Medium"><i
+            <a href="https://medium.com/@datumglobal" target="_blank" aria-label="Medium"><i
                     class="fab fa-medium"></i></a>
-            <a href="https://www.youtube.com/@VigilCortex" target="_blank" aria-label="YouTube"><i
+            <a href="https://www.youtube.com/@datumglobal" target="_blank" aria-label="YouTube"><i
                     class="fab fa-youtube"></i></a>
-            <a href="https://bsky.app/profile/VigilCortex.bsky.social" target="_blank" aria-label="Blue Sky"><i
+            <a href="https://bsky.app/profile/datumglobal.bsky.social" target="_blank" aria-label="Blue Sky"><i
                     class="fas fa-globe"></i></a>
-            <a href="https://x.com/VigilCortex" target="_blank" aria-label="X"><i class="fab fa-twitter"></i></a>
+            <a href="https://x.com/datumglobal" target="_blank" aria-label="X"><i class="fab fa-twitter"></i></a>
 
         </nav>
-        <p>&copy; 2023 Vigil Cortex</p>
+        <p>&copy; 2023 Datum Global</p>
     </footer>
     <script src="js/script.js"></script>
 </body>
