--- a/about.html
+++ b/about.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Datum Global</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/about.css ">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
@@ -26,6 +29,11 @@
                 <span class="fas fa-bars"></span>
             </button>
             <ul class="nav-links">
+                <li>
+                    <button class="nav-close" aria-label="Close navigation">
+                        <span class="fas fa-times"></span>
+                    </button>
+                </li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="reports.html">Reports</a></li>
                 <li><a href="about.html">About</a></li>
