--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datum Global</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main-links.css ">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -42,14 +45,14 @@
         <div class="container">
             <!-- Resources Section -->
             <section class="resources-links">
-                <h2>Data Analysis</h2>
+                <h2>News Analysis</h2>
                 <p>Curated topics and strategic insights to navigate the complexities of global politics and the information war.</p>
                 <a href="reports.html">Reports</a>
             </section>
 
             <!-- Disinfo Links Section -->
             <section class="disinfo-links">
-                <h2>Explore Disinfo Analysis</h2>
+                <h2>Disinformation and Psychology</h2>
                 <p>Dive deeper into specific topics and tactics related to disinformation.</p>
                 <nav>
                     <ul>
