--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main-links.css ">
-    <link rel="stylesheet" href="css/canvas.css ">
+    <link rel="stylesheet" href="css/visualization.css">
+    <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/visualization.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
 </head>
@@ -28,7 +28,7 @@
         </div>
 
     </header>
-    
+
     <!-- Header Navigation Bar -->
     <nav class="main-nav" aria-label="Main Navigation">
         <button class="nav-toggle" aria-label="Open navigation">
@@ -50,13 +50,13 @@
         <div class="container">
             <!-- Resources Section -->
             <section class="resources-links">
-                <div class="intro__wrapper">
+                <div class="details__wrapper">
                     <h2>News Analysis</h2>
                     <p>Curated topics and strategic insights to navigate the complexities of global politics and the
                         information war.</p>
                     <a href="reports.html">Dive In</a>
                 </div>
-                <div class="canvas__wrapper">
+                <div class="visuals_wrapper">
                     <h3>Topic Radar</h3>
                     <div class="topic-radar-container">
                         <canvas id="topicRadar" width="800" height="800"></canvas>
@@ -66,17 +66,41 @@
 
             <!-- Disinfo Links Section -->
             <section class="disinfo-links">
-                <h2>Disinformation and Psychology</h2>
-                <p>Dive deeper into specific topics and tactics related to disinformation.</p>
-                <ul>
-                    <li><a href="disinfo/human-networks.html">Human Networks</a></li>
-                    <li><a href="disinfo/adaptive-precision-deployment.html">Adaptive Precision Deployment (IW)</a></li>
-                    <li><a href="disinfo/machine-targeting.html">Machine Targeting</a></li>
-                    <li><a href="disinfo/manipulation-tactics.html">Manipulation Tactics & Defenses</a></li>
-                    <li><a href="disinfo/interpersonal-manipulation.html">Interpersonal Dynamics</a></li>
-                    <li><a href="disinfo/challenge-conspiracies.html">Challenge Conspiracies</a></li>
-                </ul>
+                <div class="details__wrapper">
+
+                    <h2>Disinformation and Psychology</h2>
+                    <p>Dive deeper into specific topics and tactics related to disinformation.</p>
+                    <ul>
+                        <li><a href="disinfo/human-networks.html">Human Networks</a></li>
+                        <li><a href="disinfo/adaptive-precision-deployment.html">Adaptive Precision Deployment (IW)</a>
+                        </li>
+                        <li><a href="disinfo/machine-targeting.html">Machine Targeting</a></li>
+                        <li><a href="disinfo/manipulation-tactics.html">Manipulation Tactics & Defenses</a></li>
+                        <li><a href="disinfo/interpersonal-manipulation.html">Interpersonal Dynamics</a></li>
+                        <li><a href="disinfo/challenge-conspiracies.html">Challenge Conspiracies</a></li>
+                    </ul>
+                </div>
+                <div class="visuals_wrapper">
+                    <h3>View Disinfo Tactics</h3>
+                    <div class="disinfo-carousel-container">
+                        <div class="carousel-navigation">
+                            <button class="prev-btn" aria-label="Previous card">
+                                <i class="fas fa-chevron-left"></i>
+                            </button>
+                            <button class="next-btn" aria-label="Next card">
+                                <i class="fas fa-chevron-right"></i>
+                            </button>
+                        </div>
+                        <div class="carousel-cards">
+                            <!-- Cards will be dynamically inserted here -->
+                        </div>
+                        <div class="carousel-indicators">
+                            <!-- Indicators will be dynamically inserted here -->
+                        </div>
+                    </div>
+                </div>
             </section>
+
         </div>
     </main>
     <footer>
@@ -96,6 +120,7 @@
     </footer>
     <script src="js/script.js"></script>
     <script src="js/topic-radar.js"></script>
+    <script src="js/disinfo-carousel.js"></script>
 </body>
 
 </html>
