--- a/reports.html
+++ b/reports.html
@@ -67,17 +67,17 @@
         <div class="featured-report newsletter-featured">
             <div class="featured-header">
                 <span class="featured-label">Daily Newsletter</span>
-                <span class="featured-date">Friday, April 25, 2025</span>
+                <span class="featured-date">Saturday, April 26, 2025</span>
             </div>
             <div class="featured-content">
                 
-                <p>A renewed Russian missile and drone barrage on Kyiv resulted in at least nine deaths and over 70 injuries, representing one of the deadliest attacks o...</p>
+                <p>Deadly Russian missile strikes on Kyiv, reportedly involving North Korean missiles, continue to escalate the conflict.  Simultaneously, former Preside...</p>
             </div>
-            <a href="reports/2025-W17/2025-04-25/NEWSLETTER_2025-04-25_20-14-14_FINAL.html" target="_blank" class="view-newsletter-btn">View Newsletter</a>
+            <a href="reports/2025-W17/2025-04-26/NEWSLETTER_2025-04-26_09-21-03_FINAL.html" target="_blank" class="view-newsletter-btn">View Newsletter</a>
         </div></div>
 
       <div class="top-bar">
-        <div class="refresh-info">Last updated: 2025-04-26 09:19:53</div>
+        <div class="refresh-info">Last updated: 2025-04-26 12:58:03</div>
       </div>
 
       <div class="filters">
@@ -93,7 +93,7 @@
     <div class="date-group">
         <div class="date-header">
             <span class="date-label">Saturday, April 26, 2025</span>
-            <span class="report-count">35 Reports</span>
+            <span class="report-count">36 Reports</span>
         </div>
         <div class="report-section">
             <div class="report-type">
@@ -304,9 +304,14 @@
         <div class="report-section">
             <div class="report-type">
                 <span>Summary Reports</span>
-                <span>1</span>
+                <span>2</span>
             </div>
             <div class="report-list">
+            <div class="report-card" data-type="final">
+                <h4>Daily Intelligence Newsletter</h4>
+                <p>Deadly Russian missile strikes on Kyiv, reportedly involving North Korean missiles, continue to escalate the conflict.  Simultaneously, former Preside...</p>
+                <a href="reports/2025-W17/2025-04-26/NEWSLETTER_2025-04-26_09-21-03_FINAL.html" target="_blank">View Summary</a>
+            </div>
             <div class="report-card" data-type="final">
                 <h4>Daily News Intelligence for 2025-04-26</h4>
                 <p>Geopolitical flashpoints remain volatile, particularly in Ukraine, where Russian missile attacks continue amidst reports of a Russian general's assass...</p>
